--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,4 +2,5 @@ error.400 = Bad request.
 error.404 = Request not found.
 error.404.entity = Entity not found.
 error.404.path = Path not found.
+error.405 = Method not allowed.
 error.500 = Internal server error.
